<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/round_shape"
            android:src="@drawable/rectangle_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Penawaran produk"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20 Apr, 14:04"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jam Tangan"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_status"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="Rp 250.000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_nego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ditawar Rp 250.000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_price"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nego"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tolak"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="Tolak"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                android:backgroundTint="@color/white"
                app:circularflow_radiusInDP="16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="16dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_04"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_terima"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_terima"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_04"
                android:text="Terima"
                app:cornerRadius="16dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_tolak"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#E5E5E5"
            app:layout_constraintTop_toBottomOf="@id/btn_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>