...
        <item>Tual</item>
        <item>Yogyakarta</item>
    </string-array>
    <string name="navbar_home">Home</string>
    <string name="navbar_notification">Notifikasi</string>
    <string name="navbar_sell">Jual</string>
    <string name="navbar_sale_list">Daftar Jual</string>
    <string name="navbar_account">Akun</string>

    <string name="title_product">Title Product</string>
    <string name="bandung">Bandung</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
    <string name="deskripsi">Deskripsi</string>
    <string name="saya_tertarik_dan_ingin_nego">Saya Tertarik dan Ingin Nego</string>
...
    <string name="login">Login</string>
    <string name="yeay_kamu_berhasil_mendapatkan_harga_yang_sesuai">Yeay kamu berhasil mendapatkan harga yang sesuai</string>
    <string name="segera_hubungi_pembeli_melalui_whatsapp_untuk_transaksi_selanjutnya">Segera hubungi pembeli melalui whatsapp untuk transaksi selanjutnya</string>
    <string name="product_match">Product match</string>
    <string name="name_buyer">Name buyer</string>
    <string name="city">City</string>
    <string name="hubungi_via_whatsapp">Hubungi via Whatsapp</string>
    <string name="ditawar_rp_2_000_000">Ditawar Rp 2.000.000</string>
    <string name="berhasil_terjual">Berhasil terjual</string>
    <string name="perbarui_status_penjualan_produkmu">Perbarui status penjualan produkmu</string>
    <string name="kamu_telah_sepakat_menjual_produk_ini_kepada_pembeli">Kamu telah sepakat menjual produk ini kepada pembeli</string>
    <string name="batalkan_transaksi">Batalkan transaksi</string>
    <string name="kamu_membatalkan_transaksi_produk_ini_dengan_pembeli">Kamu membatalkan transaksi produk ini dengan pembeli</string>
...
